--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,19 +1,33 @@
 .header_menu {
-    float: right;
     color: #757575;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 160%; /* 25.6px */
     letter-spacing: -0.32px;
-    margin: 50px 0 0 250px;
     padding: 0;
     list-style: none;
+    display: flex;
+    align-items: center;
 }
 
 .header_link {
-    display: inline;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 180px;
+    height: 72px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    display: flex;
     padding: 0 20px;
+    color: #333;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .header_link_a {
@@ -28,13 +42,23 @@
 }
 
 .header_link_login, .header_link_login_second {
-    position: absolute;
-    z-index: 1;
-    color: #000000;
-    font-size: 16px;
+    width: 180px;
+    height: 52px;
+    display: flex;
+    border-radius: 100px;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #555;
+    text-align: center;
+    font-family: Inter;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 600;
-    line-height: 160%; /* 25.6px */
+    font-weight: 400;
+    line-height: normal;
+    position: inherit;
+    z-index: 1;
     letter-spacing: -0.32px;
     right: 100px;
     top: 115px;
