--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -1,64 +1,55 @@
-.container {
-    padding: 0 2rem;
-}
-
 .main {
-    height: 100vh;
-    flex: 1;
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-x: hidden;
-    overflow-y: auto;
-    scrollbar-width: none;
-}
-
-.main::-webkit-scrollbar {
-    display: none;
-}
-
-.header {
-    font-weight: 700;
-    position: sticky;
-    display: flex;
-    align-items: center;
-    color: #007BFF;
-    font-size: 32px;
-    user-select: none;
-}
-
-.logo_link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: inherit;
-}
-
-.logo_title {
-    font-size: 3rem;
-    font-weight: 700;
-    margin-left: 50px;
-    padding: 0;
-    text-decoration: none;
-}
-
-.content {
+    width: 1920px;
     flex-shrink: 0;
-    border-radius: 20px;
-    border: 1px solid #ECECEC;
-    background: #E0FFFF;
-    width: 1820px;
-    height: max-content;
-    min-height: 850px;
-    position: relative;
+    border-bottom: 1px solid #C4C4C4;
+    background: #FFF;
+    backdrop-filter: blur(2px);
+    flex-direction: column; /* Stacks header, section, and footer vertically */
+    min-height: 100vh; /* Minimum height of the viewport */
+    background: linear-gradient(180deg, #FFF 33.5%, rgba(156, 201, 200, 0.65) 100%);
+}
+.header {
+    width: 1920px;
+    height: 91px;
+    flex-shrink: 0;
+    border-bottom: 1px solid #C4C4C4;
+    background: #FFF;
+    backdrop-filter: blur(2px);
+}
+
+.header_left {
+    float: left;
 }
 
 .section {
-    flex: 1;
-    width: 100vw;
-    padding: 0 50px 50px 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    flex: 1; /* Takes up all available space pushing the footer to the bottom */
+    display: flex; /* Enables flex properties for child components */
+}
+
+.content {
+    width: 100%; /* Ensures content uses all available space within the section */
+}
+
+.footer {
+    height: 324px;
+    flex-shrink: 0;
+    background: #363636;
+}
+
+.email,.github,.copyright {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.email {
+
+}
+.github{
+
+}
+.copyright{
+
 }
