--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -1,156 +1,94 @@
 .joinContainer {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    width: 756px;
+    padding: 20px;
+    border-radius: 30px 0px;
+    background: #FFF;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.30);
 }
 
 .joinTitle {
     color: #000;
-    text-align: center;
-    font-size: 52px;
+    font-family: Inter;
+    font-size: 40px;
     font-style: normal;
-    font-weight: 300;
-    line-height: 150%; /* 78px */
-    letter-spacing: -1.04px;
-    margin-top: 50px;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
     margin-bottom: 20px;
 }
 
 .inputGroup {
-    position: relative;
+    width: 100%;
     margin-bottom: 20px;
 }
 
-.visibilityToggle {
-    position: absolute;
-    right: 30px;
-    top: 15px;
-    border: none;
-    background: none;
-    cursor: pointer;
-}
-
-.input, .input_email, .inputError, .inputVerification, .input_email_text {
-    color: #757575;
+.input {
+    width: calc(100% - 22px);
+    height: 55px;
+    padding: 10px;
+    border: 1px solid #848282;
+    border-radius: 5px;
+    background: #FFF;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 100%; /* 16px */
-    letter-spacing: -0.32px;
-    width: 550px;
-    height: 55px;
-    padding: 10px 20px;
-    border: none;
-    background-color: #ffffff;
-}
-
-.input_email_text {
-    width: 380px;
-    height: 55px;
-}
-
-.input_email {
-    margin-right: 5px;
-    width: 170px;
-}
-
-.inputVerification {
-    flex: 1;
-    margin-right: 10px;
-    width: 380px;
-}
-
-.selectDomain {
-    border: none;
-    width: 151px;
-    height: 55px;
-    margin: 10px 10px 10px 10px;
-    padding: 10px 20px;
-    background-color: #ffffff;
 }
 
 .inputError {
-    border: 2px solid red;
+    border-color: red;
 }
 
 .errorText {
     color: red;
-    font-size: 0.75rem;
+    font-size: 14px;
     margin-top: 5px;
-    word-wrap: break-word;
-    max-width: 550px;
 }
 
 .submitButton {
-    width: 550px;
+    width: 100%;
     height: 55px;
-    flex-shrink: 0;
-    background: #1E90FF;
-    color: #FFF;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 550;
-    line-height: 100%;
-    letter-spacing: -0.48px;
-    padding: 10px 20px;
+    background-color: #57C5B6;
+    color: white;
+    font-size: 18px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    margin-top: 20px;
 }
 
-.submitButton:disabled {
-    background-color: grey;
-    cursor: not-allowed;
+.notificationMessage {
+    font-size: 14px;
+    margin-top: 5px;
 }
 
-.verifyButton:disabled {
-    background-color: grey;
-    cursor: not-allowed;
+.checkboxGroup {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-.verifyButton {
-    width: 151px;
+.emailGroup {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.emailInput {
+    width: calc(70% - 10px);
     height: 55px;
-    flex-shrink: 0;
-    margin-left: 10px;
-    border: 1px solid #A8A8A8;
-    background: #87CEFA;
-    padding: 10px 20px;
-    color: #FFFFFF;
+    padding: 10px;
+    border: 1px solid #848282;
+    border-radius: 5px;
+    background: #FFF;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 100%; /* 16px */
-    letter-spacing: -0.32px;
 }
 
-@media screen and (max-width: 1919px) and (min-width: 1600px) {
-    .joinTitle {
-        font-size: 44px;
-        line-height: 150%;
-        letter-spacing: -0.88px;
-    }
-
-    .input, .input_email, .inputError, .inputVerification, .input_email_text {
-        font-size: 14px;
-        letter-spacing: -0.28px;
-    }
-
-    .input_email_text {
-        width: 380px;
-        height: 55px;
-    }
-
-    .input_email {
-        margin-right: 5px;
-        width: 170px;
-    }
-
-    .inputVerification {
-        flex: 1;
-        margin-right: 10px;
-        width: 380px;
-    }
+.emailButton {
+    width: calc(30% - 10px);
+    height: 55px;
+    background-color: #57C5B6;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
