[24-07-24] 체크 테스크 6

--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -8,7 +8,7 @@
 
 .joinTitle {
     color: #000;
-    font-family: Inter;
+    font-family: Noto Sans KR, serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 400;
