--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -11,19 +11,17 @@
 }
 
 .header_link {
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 180px;
     height: 72px;
     flex-direction: column;
-    justify-content: center;
     flex-shrink: 0;
     display: flex;
     padding: 0 20px;
     color: #333;
     text-align: center;
-    font-family: Inter;
+    font-family: Noto Sans KR, serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -52,7 +50,7 @@
     flex-shrink: 0;
     color: #555;
     text-align: center;
-    font-family: Inter;
+    font-family: Noto Sans KR, serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
